fix: fix bug with visibility in ascii components while animation going

--- a/src/components/ASCII/ASCIIUtils.module.css
+++ b/src/components/ASCII/ASCIIUtils.module.css
@@ -6,3 +6,7 @@
 	top: 0.5lh !important;
 	transform: translateX(-50%) !important;
 }
+
+.before-animating + * {
+	visibility: hidden;
+}
